# zhongcaoyaominglu

./: .gitignore  Cargo.toml  Dockerfile  README.md  dd.ts  docker-compose.yml  ee.json  ee.ts  index.html  nx.json  package-lock.json  package.json  paddle.yaml  start.bat  workspace.json
.github/workflows/: actions.yml
admin/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  proxy.config.json
admin/src/: index.html  main.ts
api/: .gitignore  docker-compose.yml  nest-cli.json  package-lock.json  package.json  pm2.dev.json  pm2.json  pm2.tts.json  pm2.zhongcaoyao.json  test
api/apps/: ports.ts
api/public/: 340.20c62c065ab67ab10fd8.js  340.624e9a3bcc08e7d453b7.js  340.8c0d68bf309e57ff9299.js  340.a82c26cfa2c2e4621dbf.js  340.aec02039fd6a84382e6b.js  340.b0f61fca64bd64166f5e.js  340.bf1c9693e9d6dfca988f.js  340.cfb04d1b0183c2529fa9.js  index.html  (+18 more)
backup/: docker-compose.yml  start
crawler/: main.ts  package-lock.json  package.json
data/: index.json
src/: main.rs
zhongcaoyao/: package.json  project.config.json  project.tt.json
zhongcaoyao-rs/: .env  Cargo.toml  a.xml
zhongcaoyao-rs/src/: category.rs  common.rs  main.rs  medicine.rs
zhongcaoyao-rs/src/entity/: admin.rs  category.rs  category_bg_img.rs  category_closure.rs  chinese_medicine.rs  chinese_medicine_alias.rs  chinese_medicine_images_image.rs  chinese_medicine_meridian_tropism_meridian_tropism.rs  chinese_medicine_nature_nature.rs  chinese_medicine_taste_taste.rs  image.rs  meridian_tropism.rs  mod.rs  nature.rs  passage.rs  prelude.rs  query_result_cache.rs  taste.rs
(+423 files in other folders)
